fix text wrap in tooltips of TextSymbolizer dialog, and get a new gxp version that prevents showing an empty fieldset based on geometry type

--- a/src/geonode-client/app/static/theme/app/geoexplorer.css
+++ b/src/geonode-client/app/static/theme/app/geoexplorer.css
@@ -1,3 +1,6 @@
+.x-tip {
+    white-space: normal !important;
+}
 .x-btn .ms-icon-timeline {
     background-image: url(img/ClockV4_Orange.png);
     background-position: 0px 0px !important;
